--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title>WWDCScholars | Adding a Mapview </title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+	<!-- Forked me on Github -->
+	<a href="http://wwdcscholars.github.io/QTreeDemo/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+
+	<div id="head" style="margin-top:30px;">
+		<a href="https://wwdcscholars.github.io" style="text-decoration:none;" target="_blank">
+			<h1>WWDC</h1><h2>Scholars | Official Github Repo Page </h2>
+		</a> 
+		<div class="insideHead">
+
+			<a href="http://wwdcscholars.com" target="_blank"><img src="https://img.shields.io/badge/Website-VIEW%20SCHOLARS-lightgrey.svg"/></a>
+			<a href="https://itunes.apple.com/us/app/scholars-of-wwdc/id999731893?mt=8" target="_blank"><img src="https://img.shields.io/badge/Scholars%20App-DOWNLOAD-7e69a8.svg"/></a>
+
+			<a href="https://gitter.im/WWDCScholars/WWDCScholarsHQ" target="_blank"><img src="https://img.shields.io/badge/Questions%3F-CHAT%20WITH%20US-c89098.svg"/></a>
+			
+			<a href="https://wwdcscholarsform.herokuapp.com" target="_blank"><img src="https://img.shields.io/badge/Are%20you%20one%20of%20us%3F-ADD%20YOURSELF%20IN-C5AE87.svg"/></a>
+			
+			<a href="https://opensource.org/licenses/MIT" target="_blank"><img src="https://img.shields.io/badge/Licence-MIT-blue.svg"/> </a>
+
+		</div>
+	</div>
+
+	<div class="container">
+		<h1>Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
+
+		<img src='wwdcScholar.gif' title='Video Walkthrough' height="400px" alt='Video Walkthrough' />
+	</div>
+
+	<div id="footer">
+		<p>
+			&#63743; WWDCScholars website, app, and github repo is not affiliated with Apple Inc. in any way. It is made by a group of the Apple Scholarship Winners who wants to inspire more people to learn how to code :)
+		</p>
+	</div>
+
+</body>
+
+</html>
