--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<div class="container">
 		<h1>Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
+		<p>by <a href="https://github.com/hao44le">Gelei</a></p>
 
 		<img src='wwdcScholar.gif' title='Video Walkthrough' height="400px" alt='Video Walkthrough' />
 	</div>
