--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</div>
 
 	<div class="container">
-		<h1>Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
-		<p>by <a href="https://github.com/hao44le" target="_blank" style="text-decoration:none;">Gelei Chen</a></p>
+		<h1 style="margin-bottom:0px;">Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
+		<p style="margin-top:0px;">by <a href="https://github.com/hao44le" target="_blank" style="text-decoration:none;"><b></b>Gelei Chen</b></a></p>
 
 		<img src='wwdcScholar.gif' title='Video Walkthrough' height="400px" alt='Video Walkthrough' />
 	</div>
