--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div class="container">
 		<h1 style="margin-bottom:0px;">Adding a mapview in the app 'Scholars of WWDC' Tutorial</h1>
-		<p style="margin-top:0px;">by <a href="https://github.com/hao44le" target="_blank" style="text-decoration:none;"><b>Gelei Chen</b></a></p>
+		<p style="margin-top:0px;">by <a href="http://wwdcscholars.com/WWDC-Scholars-Web-2015/detail.php?page=c8KjIGMsco" target="_blank" style="text-decoration:none;"><b>Gelei Chen</b></a></p>
 
 		<img src='wwdcScholar.gif' title='Video Walkthrough' height="400px" alt='Video Walkthrough' />
 	</div>
