--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 
 <body>
 	<!-- Forked me on Github -->
-	<a href="https://github.com/WWDCScholars/QTreeDemo/tree/master"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+	
 
-	<div id="head" style="margin-top:30px;">
+	<div id="helloBar" style="background-color: #292c36; margin-top:-150px; margin-left:-10px; -webkit-box-shadow:0px 2px 2px #92c86b; -moz-box-shadow:0px 2px 2px #92c86b; box-shadow:0px 2px 2px #92c86b; width:100%; position:fixed; ">
+		<h2 style="color:white; padding-bottom:0px; text-align: center; margin-bottom:-10px;"><img src="https://devimages.apple.com.edgekey.net/wwdc/images/wwdc16-logo.png" /></h2>
+		<p style="color:white; text-align: center; font-size: 13px;" > is back - June 13 - 18, 2016 </p>
+		<p style="color:white; text-align: center; "><a href="https://developer.apple.com/wwdc/scholarships/" target="_blank" style="text-decoration:none;"><b>Apply for a WWDC Scholarship</b></a></p>
+	</div>
+
+	<a href="https://github.com/WWDCScholars/QTreeDemo/tree/master"><img style="position:fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+
+	<div id="head" style="margin-top:150px;">
+
 		<a href="https://wwdcscholars.github.io" style="text-decoration:none;" target="_blank">
 			<h1>WWDC</h1><h2>Scholars | Official Github Repo Page </h2>
 		</a> 
