Updated Hello Bar. Application is now closed :)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="helloBar" style="background-color: #292c36; margin-top:-150px; margin-left:-10px; -webkit-box-shadow:0px 2px 2px #92c86b; -moz-box-shadow:0px 2px 2px #92c86b; box-shadow:0px 2px 2px #92c86b; width:100%; position:fixed; ">
 		<h2 style="color:white; padding-bottom:0px; text-align: center; margin-bottom:-10px;"><img src="https://devimages.apple.com.edgekey.net/wwdc/images/wwdc16-logo.png" /></h2>
 		<p style="color:white; text-align: center; font-size: 13px;" > is back - June 13 - 17, 2016 </p>
-		<p style="color:white; text-align: center; "><a href="https://developer.apple.com/wwdc/scholarships/" target="_blank" style="text-decoration:none;"><b>Apply for a WWDC Scholarship</b></a></p>
+		<p style="color:white; text-align: center; "><b>Application is now closed, and results will be out on May 9, 2016. Good luck to all of us WWDC Scholarship Applicants.</b></p>
 	</div>
 
 	<!-- Forked me on Github -->
